Fix: change drop-shadow position to nearer to img
iOS drop-shadow, even with -webkit used, disagrees with shadows
overflowing out of image border. Change position skew from 10px/10px to
5px/5px to bring shadow closer to image.

--- a/src/components/Result/Result.scss
+++ b/src/components/Result/Result.scss
@@ -242,8 +242,8 @@
     width: 80%;
     height: 80%;
     object-fit: contain;
-    filter: drop-shadow(13px 10px 2px #222);
-    -webkit-filter: drop-shadow(13px 10px 2px #00000059);
+    filter: drop-shadow(5px 5px 2px #222);
+    -webkit-filter: drop-shadow(5px 5px 2px #00000059);
 }
 
 .result_section-monster_description-container {
